add insights
